# yolo-developer

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  README.md  pyproject.toml
.github/workflows/: docs.yml
.yolo/: seed_state.json
_bmad-output/analysis/: brainstorming-session-2026-01-03.md
_bmad-output/implementation-artifacts/: 1-1-initialize-python-project-with-uv.md  1-2-create-project-directory-structure.md  1-3-set-up-code-quality-tooling.md  1-4-implement-configuration-schema-with-pydantic.md  1-5-load-configuration-from-yaml-files.md  1-6-support-environment-variable-overrides.md  1-7-validate-configuration-on-load.md  1-8-export-and-import-project-configurations.md  10-1-create-langgraph-workflow.md  10-10-emergency-protocols.md  10-11-priority-scoring.md  10-12-velocity-tracking.md  10-13-context-injection.md  10-14-human-escalation.md  10-15-rollback-coordination.md  10-16-health-telemetry-dashboard-data.md  10-2-sm-agent-node-implementation.md  10-3-sprint-planning.md  10-4-task-delegation.md  10-5-health-monitoring.md  10-6-circular-logic-detection.md  10-7-conflict-mediation.md  10-8-agent-handoff-management.md  10-9-sprint-progress-tracking.md  11-1-decision-logging.md  11-2-requirement-traceability.md  11-3-human-readable-audit-view.md  11-4-audit-export.md  11-5-cross-agent-correlation.md  11-6-token-cost-tracking.md  11-7-audit-filtering.md  11-8-auto-adr-generation.md  12-1-typer-cli-setup.md  12-2-yolo-init-command.md  12-3-yolo-seed-command.md  12-4-yolo-run-command.md  12-5-yolo-status-command.md  12-6-yolo-logs-command.md  12-7-yolo-tune-command.md  12-8-yolo-config-command.md  (+81 more)
_bmad-output/planning-artifacts/: architecture.md  bmm-workflow-status.yaml  epics.md  implementation-readiness-report-2026-01-04.md  prd.md  product-brief-yolo-developer-2026-01-04.md
_bmad-output/planning-artifacts/research/: technical-multi-agent-orchestration-research-2026-01-03.md
_bmad/_config/: files-manifest.csv  manifest.yaml
_bmad/_config/ides/: claude-code.yaml  codex.yaml
_bmad/bmm/: config.yaml
_bmad/core/: config.yaml
docs/: Gemfile  _config.yml  getting-started.md  index.md  installation.md
docs/architecture/: index.md
docs/cli/: index.md
docs/configuration/: index.md
docs/guides/: brownfield.md  examples.md  gathering.md  github.md  issue-import.md  web.md
docs/mcp/: index.md
docs/sdk/: index.md
src/yolo_developer/: __init__.py  version.py
src/yolo_developer/agents/: __init__.py
src/yolo_developer/analyst/: __init__.py  elicitation.py  export.py  models.py  session.py  validation.py
src/yolo_developer/audit/: __init__.py  adr_memory_store.py  adr_service.py  adr_store.py  adr_types.py  correlation.py  correlation_memory_store.py  correlation_store.py  correlation_types.py  cost_memory_store.py  cost_service.py  cost_store.py  cost_types.py  cost_utils.py  csv_exporter.py  export.py  export_protocol.py  export_types.py  filter_service.py  filter_types.py  formatter_protocol.py  formatter_types.py  json_decision_store.py  json_exporter.py  logger.py  memory_store.py  pdf_exporter.py  plain_formatter.py  rich_formatter.py  store.py  traceability.py  traceability_memory_store.py  traceability_store.py  traceability_types.py  types.py  view.py
src/yolo_developer/cli/: __init__.py  activity.py  display.py  main.py
src/yolo_developer/config/: __init__.py  export.py  loader.py  schema.py  validators.py
src/yolo_developer/gates/: __init__.py  decorator.py  evaluators.py  metrics_api.py  metrics_calculator.py  metrics_store.py  metrics_types.py  remediation.py  report_generator.py  (+3 more)
tests/: __init__.py  conftest.py
tests/fixtures/: mocks.py
tests/integration/: test_ac_measurability_gate.py  test_ambiguity_detection.py  test_analyst_integration.py  test_architecture_validation_gate.py  test_cli_seed.py  test_cli_tools.py  test_confidence_scoring_gate.py  test_decision_queries.py  test_definition_of_done_gate.py  test_gate_failure_reports.py  test_gate_metrics_tracking.py  test_memory_persistence.py  test_orchestrator.py  test_pattern_learning.py  test_project_isolation.py  test_quality_gates.py  test_quality_threshold_config.py  test_seed_parsing.py  test_session.py  test_testability_gate.py
tests/unit/: __init__.py  conftest.py  test_code_quality_tooling.py  test_directory_structure.py  test_init.py
(+436 files in other folders)
