[project]
name = "yolo-developer"
version = "0.1.0"
description = "Autonomous multi-agent AI development system using BMad Method"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "YOLO Developer", email = "dev@example.com"}
]
keywords = ["ai", "agents", "development", "automation"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "langgraph>=1.0.5",
    "langchain-core",
    "langchain-anthropic",
    "langchain-openai",
    "chromadb>=1.2.0",
    "typer",
    "rich",
    "pydantic>=2.0.0",
    "pydantic-settings",
    "litellm",
    "tenacity",
    "structlog",
    "pyyaml",
    "python-dotenv",
    "fastmcp>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
    "pytest-cov",
    "ruff",
    "mypy",
    "langsmith",
]

[project.scripts]
yolo = "yolo_developer.cli.main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/yolo_developer"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
